--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "expo": "~51.0.38",
+    "expo": "~51.0.39",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
     "lucide-react-native": "^0.452.0",
@@ -25,7 +25,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "expo-image-picker": "~15.0.7"
+    "expo-image-picker": "~15.0.7",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
